*master

* added possibility to specify and item's URL as a block which is evaulated after the :if and :unless conditions have been checked. Credits to Nicholas Firth-McCoy.
* upgraded to rspec 2.0.0
* fixed cgi error in sinatra adapter. Credits to Jack Dempsey.

*3.0.0

* added ability to specify dynamic items using an array of hashes. Credits to Anshul Khandelwal for input and discussion.
* added ability to specify attributes for the generated link-tag in list renderer (up to now the attributes have been applied to the li-tag). Credits to Anthony Navarre for input and discussion.

*3.0.0.beta2

* moving code for initializing plugin in sinatra to separate gem

*3.0.0.beta1

* moving deprecated rails controller methods (navigation, current_navigation) to separate file 'rails_controller_methods'. Deprecations removed. File can be required explicitly if controller methods should be still available.
* decoupling from Rails. Introducing the concept of adapters to work with several frameworks. 
* tested with Rails 3.0.0
* adding support for Sinatra and Padrino frameworks.
* cherry picking active_support stuff instead of requiring the whole bunch (tested with active_support >= 2.3.2 and 3.0.0)
* created public sample project which includes demo for Rails2, Rails3, Sinatra and Padrino (will be available on github soon)
* better src file organization (adapters/core/rendering folders)

*2.7.3

* initializing SimpleNavigation.config_file_path with empty array (was nil before). Allows for adding paths before gem has been initialized.

*2.7.2

* added ability to have more than one config_file_path (useful if simple-navigation is used as a part of another gem/plugin). Credits to Luke Imhoff.

*2.7.1

* added SimpleNavigation.request and SimpleNavigation.request_uri as abstraction for getting request_uri (rails2/rails3)
* use request.fullpath instead of request.request_uri for Rails3. Credits to Ben Langfeld.

*2.7.0
